src/snapshots/afrotd__parser__tests__interpretation_6.3.4_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 4
index: 5
text: "Als ein Punt auf dem Boden rollt, blockt A44 B33 in den Ball. Der\nBall springt seitlich weg und trifft B48 am Bein. Team A recovert."
ruling: "Team A’s Ball, 1. und 10 am Punkt der Recovery. Obwohl B33’s\nBerührung erzwungen wurde, wurde die Berührung von B48 wiederum\nnicht erzwungen (Regel 2.11.4). Durch B48’s Berührung kann Team A\nden Kick legal recovern (Regel 6.3.4.a)."
