src/snapshots/afrotd__parser__tests__interpretation_6.3.9_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 9
index: 1
text: "A33 berührt illegal einen Punt und der Ball rollt danach in Team\nB’s Endzone, wo Team B den Ball recovert und ins Spielfeld trägt."
ruling: "Der Ball wird dead, wenn er den Boden in der Endzone berührt. Team B kann entweder einen Touchback wählen oder den Ball\nam Punkt von Team A’s illegaler Berührung annehmen (Regel 4.1.3.c)."
