src/snapshots/afrotd__parser__tests__interpretation_6.4.1_13.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 4
  - 1
index: 13
text: "B44 steht an der B-25 in Position zum Fangen eines Punts.\nWährend der Ball noch sehr hoch in der Luft ist und deutlich bevor er\nsich B44 nähert, läuft A88 innerhalb eines Meters unmittelbar vor B44\nher, ist aber nicht in der Nähe, als der Ball ankommt. B44 fängt den Kick\nund wird getackelt."
ruling: "Kein Foul. Obwohl A88 die 1-Meterzone\ndirekt vor B44 durchläuft, ist das so früh, dass diese Aktion keine Behinderung der Fangmöglichkeit eines Kicks darstellt."
