src/snapshots/afrotd__parser__tests__interpretation_6.4.1_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 6
  - 4
  - 1
index: 4
text: "Bei dem Versuch eines Team B-Spielers, einen Kick zu fangen, ohne Fair Catch-Signal, mufft er den Ball. Der Ball wird danach\nvon einem Gegner berührt, der den Receiver nicht behindert, als dieser in Position ist, den Ball zu fangen."
ruling: "Keine Behinderung\nbeim Fangen eines Kicks. Durch das fehlende Fair Catch-Signal endet\nder Schutz zum ungehinderten Fangen eines Kicks, wenn ein Team BSpieler den Ball mufft."
